--- a/src/components/Welcome.css
+++ b/src/components/Welcome.css
@@ -1,3 +1,29 @@
+.welcome{
+    background-color: rgba(147, 151, 147, 0.1);
+    padding-bottom: 50px;
+    padding-top: 50px;
+}
 .logo{
+    width: 100%;
+}
+.logo img{
     width: 500px;
 }
+.moto{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    color: #898989;
+    text-transform: uppercase;
+    font-size: 50px;
+}
+.left{
+    text-align: right;
+    font-weight: bolder;
+    color: #78bb83;
+}
+.right{
+    text-align: left;
+    font-weight: lighter;
+    color: #598e62;
+}
+
